set static resources 304

--- a/sudoku-site.conf
+++ b/sudoku-site.conf
@@ -1,21 +1,43 @@
 WSGIPythonPath /usr/local/var/www/wsgi-scripts
-
 <VirtualHost 127.0.0.1:80>
 	ServerName sudoku.hulixin.com
 	ServerAdmin hulixin@examples.net
 
+	#DocumentRoot "/usr/local/var/www/html"
+	#<Directory /usr/local/var/www/html>
+	#	Require all granted
+	#</Directory>
+
 	Alias /static/ /usr/local/var/www/static/
 	<Directory /usr/local/var/www/static>
 		Require all granted
+		<IfModule expires_module>
+			ExpiresActive On
+			ExpiresByType application/x-javascript "access plus 7 days"
+			ExpiresByType text/css "access plus 7 days"
+			ExpiresByType image/gif "access plus 7 days"
+			ExpiresByType image/png "access plus 7 days"
+			ExpiresByType image/jpeg "access plus 7 days"
+		</IfModule>
 	</Directory>
 
 	WSGIScriptAlias / /usr/local/var/www/wsgi-scripts/wsgi.py
+	#WSGIScriptAlias /blog/ /usr/local/var/www/wsgi-scripts/techBlog/techBlog/wsgi.py
 
 	<Directory /usr/local/var/www/wsgi-scripts>
 	<Files wsgi.py>
-		Require all granted
+	Require all granted
 	</Files>
 	</Directory>
+
+	FileETag None
+	#DocumentRoot /usr/local/var/www
+	#Alias /static/ /usr/local/var/www/static/
+
+	#<Directory /usr/local/var/www/static>
+	#Order deny,allow
+	#Allow from all
+	#</Directory>
 
 	#ProxyRequests Off
 	#ProxyPreserveHost On
@@ -24,9 +46,9 @@ WSGIPythonPath /usr/local/var/www/wsgi-scripts
 	#ProxyPassReverse /sudoku http://localhost:9981
 	#ProxyPassReverse /static http://localhost:9981/static
 	#ProxyVia Full
-
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
